# CodingPractice

./: CMakeLists.txt  README
codility_challanges/: Alpha2010.cpp  Beta2010.cpp  Gamma2011.cpp
codility_lessons/: README
google_code_jam/gcj_2013/: qr_probA.cpp  qr_probB.cpp  qr_probC.cpp  qr_probC_sml_lrg.cpp
google_code_jam/gcj_2014/: _r1B_probC.cpp  qr_probA.cpp  qr_probB.cpp  qr_probC.cpp  qr_probD.cpp  r1A_probB.cpp  r1A_probC.cpp  r1B_probA.cpp  r1B_probB.cpp  r1B_probC.cpp  r1B_probCC.cpp  r1_probA.cpp  r1_probB.cpp
google_code_jam/gcj_2015/: B.cpp  qr_probA.cpp  qr_probB.cpp  qr_probC.cpp  qr_probD.cpp  r1b_probA.cpp  r1b_probB.cpp  r1b_probC.cpp
google_code_jam/gcj_2016/: qr_probA.cpp  qr_probB.cpp  qr_probC.cpp  qr_probC_naive.cpp  qr_probD.cpp  r1A_probA.cpp  r1A_probB.cpp  r1A_probC.cpp
other/: moving_inside_square.cpp
top_coder/: similar.cpp
